# neural_net_from_scratch

./: Backpropagation.ipynb  DataLoaderPractice.ipynb  ForwardPass.ipynb  Full_pass.ipynb  LSTM.ipynb  Pytorch_basic.ipynb  Pytorch_playground.ipynb  RNN.ipynb  RNN_using_pytorch.ipynb  Untitled.ipynb  Untitled1.ipynb  pyproject.toml
.ipynb_checkpoints/: DataLoaderPractice-checkpoint.ipynb  ForwardPass-checkpoint.ipynb  Full_pass-checkpoint.ipynb
