[project]
name = "neural-net-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.4.4",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
]
